# s2kit

./: .gitignore  README.md  configure.ac
src/include/: Makefile.am
src/include/s2kit/: FST_semi.h  FST_semi_fly.h  FST_semi_memo.h  Makefile.am
src/lib/: FST_semi.c  FST_semi_fly.c  FST_semi_memo.c  Makefile.am  cospmls.c  pmls.c  s2kit.pc.in  seminaive.c
test/: Makefile.am  test_conv_semi_fly.c  test_conv_semi_memo.c  test_naive.c  test_s2_semi_fly.c  test_s2_semi_memo.c  test_s2_semi_memo_for.c  test_s2_semi_memo_inv.c  test_semi.c
